// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`not() success 1`] = `
[
  [
    true,
    {
      "kind": "word",
      "text": "foo",
    },
  ],
  [
    true,
    {
      "kind": "word",
      "text": "bar",
    },
  ],
]
`;

exports[`opt() makes failing match ok 1`] = `
{
  "tags": {},
  "value": [
    undefined,
    "foo",
  ],
}
`;

exports[`seq() handles two element match 1`] = `
{
  "tags": {},
  "value": [
    "#import",
    "foo",
  ],
}
`;

exports[`tracing 1`] = `
"..repeat
  ..wordz
    : 'a' (word)
    a   Ln 1
    ^
    ✓ kind 'word'
  ✓ wordz
  ..wordz
    x kind 'word'
  x wordz
✓ repeat"
`;
